--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         hospedadas no GitHub.
       </p>
       <div class="div-section">
-        <h2>Experience</h2>
+        <h2>Experiência</h2>
         <div class="div-template">
           <img src="./images/download.png" alt="" class="img-template" />
           <div class="div-descrpition-experience">
@@ -58,7 +58,7 @@
         </div>
 
         <div class="div-section">
-          <h2>Education</h2>
+          <h2>Educação</h2>
           <div class="div-template">
             <img
               src="./images/Brasao_UFSC_vertical_extenso.svg"
@@ -75,19 +75,19 @@
     </section>
     <section class="section-details">
       <div class="div-details">
-        <h2>Details</h2>
+        <h2>Contatos</h2>
         <p>lucasbaffi28@gmail.com</p>
         <p>(48)98465-0544 - Somente WhatsApp</p>
         <p>(48)98673-4849 - Ligacao e WhatsApp</p>
       </div>
       <div class="div-details">
-        <h2>Languages</h2>
+        <h2>Idiomas</h2>
         <p>English - Intermediario</p>
         <p>Espanhol - Basico</p>
         <p></p>
       </div>
       <div class="div-details">
-        <h2>Main skills</h2>
+        <h2>Skills</h2>
         <p>SCRUM</p>
         <p>Curso de Soft Skills</p>
         <p>Facil Aprendizagem</p>
@@ -99,5 +99,6 @@
        
       </div>
     </section>
+  
   </body>
 </html>
